# greenroom

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AUTH_MIGRATION.md  CLAUDE.md  DECISIONS.md  DECISIONS_ARCHIVE.md  NEXT_SPRINT.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  app.py  celery_app.py  cli.py  pyproject.toml
backend/api/v1/: __init__.py  admin.py  apple_maps.py  auth.py  auth_apple.py  auth_apple_music.py  auth_google.py  auth_identity.py  auth_magic_link.py  auth_passkey.py  auth_session.py  auth_tidal.py  cities.py  email_test.py  events.py  feedback.py  home.py  map_recommendations.py  maps.py  notification_preferences.py  onboarding.py  push.py  recommendations.py  saved_events.py  track.py  unsubscribe.py  users.py  venue_comments.py  venues.py  webhooks.py
backend/core/: auth.py  config.py  database.py  exceptions.py  genres.py  knuckles.py  knuckles_client.py  logging.py  observability.py  rate_limit.py  text.py  vapid_keys.py
backend/data/models/: __init__.py  artist_similarity.py  artists.py  cities.py  events.py  feedback.py  hydration_log.py  map_recommendations.py  notification_log.py  notifications.py  onboarding.py  push.py  recommendations.py  region.py  scraper.py  users.py  venue_comments.py  venues.py
backend/data/repositories/: artists.py  cities.py  email_digest_log.py  events.py  feedback.py  follows.py  magic_links.py  map_recommendations.py  notification_log.py  notification_preferences.py  onboarding.py  passkeys.py  push_subscriptions.py  regions.py  scraper_alerts.py  scraper_runs.py  users.py  venue_comments.py  venues.py
backend/migrations/: env.py
backend/migrations/versions/: 20260416_initial_schema.py  20260417_add_region_to_cities.py  20260417_add_spotify_sync_to_users.py  20260418_add_recent_artists_to_users.py  20260419_auth_identity_overhaul.py  20260419_drop_local_auth_tables.py  20260419_rename_user_oauth_providers.py  20260420_add_artists_table.py  20260420_add_venue_comments.py  20260420_per_provider_music_caches.py  20260420_rename_sendgrid_message_id.py  20260421_add_map_recommendations.py  20260421_add_onboarding_and_follows.py  20260422_backfill_event_timezones.py  20260424_correct_venue_coordinates.py  20260424_map_recommendations_venue_id.py  20260425_add_pricing_links_and_refreshed_at.py  20260425_add_scraper_alerts.py  20260426_add_notification_preferences.py  20260427_add_feedback_table.py  20260501_add_musicbrainz_columns_to_artists.py  20260502_add_canonical_genres_to_artists.py  20260502_add_lastfm_columns_to_artists.py  20260503_add_artist_hydration.py  20260503_add_artist_similarity_table.py  20260503_add_email_bounce_columns.py  20260503_add_granular_tags_to_artists.py  20260503_add_last_home_visit_at.py  20260503_add_notification_log.py  20260503_add_push_subscriptions.py  20260503_add_region_id_to_cities.py  20260503_add_regions_table.py
backend/pricing/: __init__.py  base.py  registry.py
backend/pricing/providers/: __init__.py  scraper_origin.py  seatgeek.py  ticketmaster.py  tickpick.py
backend/recommendations/: base.py  engine.py
backend/recommendations/overlays/: __init__.py  actionability.py  availability.py  time_window.py
backend/recommendations/scorers/: artist_match.py  followed_artist.py  followed_venue.py  similar_artist.py  venue_affinity.py
backend/scraper/: notifier.py  runner.py  validator.py
backend/scraper/base/: dates.py  http.py  jsonld.py  models.py  scraper.py
backend/scraper/config/: venues.py
backend/scraper/venues/: bethesda_theater.py  black_cat.py  comet_ping_pong.py  ottobar.py  pearl_street_warehouse.py  pie_shop.py  the_camel.py  the_hamilton.py
backend/scraper/watchdogs/: __init__.py  dc9_dice_widget.py
backend/scripts/: __init__.py  backfill_artist_enrichment.py  run_scrapers.py  seed_dmv.py  smoke_overlay.py  smoke_ticketmaster.py
backend/services/: admin.py  admin_dashboard.py  apple_maps.py  apple_music.py  apple_music_tasks.py  artist_enrichment.py  artist_enrichment_tasks.py  artist_hydration.py  artist_hydration_tasks.py  artist_similarity.py  auth.py  cities.py  email.py  email_renderer.py  email_structured_data.py  email_tokens.py  events.py  feedback.py  follows.py  genre_normalization.py  genre_normalization_tasks.py  home.py  home_tasks.py  lastfm.py  lastfm_similarity_tasks.py  lastfm_tasks.py  map_recommendations.py  musicbrainz.py  musicbrainz_tasks.py  notification_dispatcher.py  notification_preferences.py  notification_tasks.py  notifications.py  onboarding.py  pricing_tasks.py  push.py  recommendations.py  resend_webhooks.py  saved_events.py  scraper_digest.py  (+12 more)
backend/services/email_templates/: _show_card.html  base.html  base.txt
backend/tests/: conftest.py  test_cli.py  test_cors.py
backend/tests/core/: test_auth.py  test_config.py  test_knuckles.py  test_knuckles_client.py  test_rate_limit.py  test_vapid_keys.py
backend/tests/data/: conftest.py  test_admin_dashboard_service.py  test_artist_hydration_service.py  test_artist_similarity_service.py  test_artists_repo.py  test_cities_repo.py  test_email_digest_log_repo.py  test_events_repo.py  test_feedback_repo.py  test_follows_repo.py  test_follows_service.py  test_home_service_db.py  test_magic_links_repo.py  test_map_recommendations_repo.py  test_mass_hydration.py  test_notification_preferences_repo.py  test_onboarding_repo.py  test_onboarding_service.py  test_passkeys_repo.py  test_regions.py  test_scraper_alerts_repo.py  test_scraper_runs_repo.py  test_tag_consolidation_db.py  test_today_filter.py  test_users_repo.py  test_venue_comments_repo.py  test_venues_repo.py
backend/tests/pricing/: test_base.py  test_scraper_origin.py  test_seatgeek.py  test_ticketmaster.py  test_tickpick.py
(+354 files in other folders)
