[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [".."]
include = ["backend*"]

[project]
name = "greenroom-backend"
version = "0.1.0"
description = "DC Concert Aggregator — Flask REST API"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0,<4",
    "sqlalchemy>=2.0,<3",
    "alembic>=1.13,<2",
    "psycopg2-binary>=2.9,<3",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "celery[redis]>=5.3,<6",
    "redis>=5.0,<6",
    "requests>=2.31,<3",
    "beautifulsoup4>=4.12,<5",
    "lxml>=5.0,<6",
    "PyJWT>=2.8,<3",
    "sendgrid>=6.11,<7",
    "gunicorn>=21.2,<23",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-cov>=5.0,<6",
    "black>=24.0,<25",
    "ruff>=0.4,<1",
    "mypy>=1.9,<2",
    "types-requests>=2.31,<3",
    "types-beautifulsoup4>=4.12,<5",
    "responses>=0.25,<1",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["backend"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = ["migrations/"]

[[tool.mypy.overrides]]
module = ["celery.*", "sendgrid.*", "posthog.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--strict-markers -v"

[tool.coverage.run]
source = ["backend"]
omit = [
    "*/tests/*",
    "*/scripts/*",
    "*/migrations/*",
    "*/celery_app.py",
    "*/app.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
